# packages/gateway-management-ui/src/application/gateway-types.ts
@@ -2,6 +2,7 @@ export interface GatewayRecord {
   clusterId: string;
   consoleUrl?: string;
   createdAt?: string;
+  createdBy?: string;
   databaseId: string;
   externalDns?: string;
   id: string;
